Доделать жизненный цикл проектов
