# backend/app/models/application.py
@@ -33,6 +33,7 @@ class Application(Base):
     created_at: Mapped[datetime] = mapped_column(
         DateTime(timezone=True), default=lambda: datetime.now(timezone.utc)
     )
+    decided_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True), default=None)
 
     project: Mapped["Project"] = relationship()
     project_role: Mapped["ProjectRole"] = relationship()
